--- a/app/views/analyze.scala.html
+++ b/app/views/analyze.scala.html
@@ -1,15 +1,19 @@
-@()
+@(postUrl:Call, form: Form[forms.WebUrlInputForm.Data], scrapResult: Seq[AnalysisResult])(implicit request: MessagesRequestHeader)
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Url Scrapper</title>
+    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")">
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
 </head>
 <body>
-<div>
-    Enter the url to analyze
+<div class="container">
+    @helper.form(postUrl) {
+        @helper.inputText(form("url"), '_label->"Enter the url to analyze:")
+        <input class="btn btn-primary" type="submit" value="Analyze!" />
+    }
 </div>
 
 <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
