controller integrated with analyzer service

--- a/app/views/analyze.scala.html
+++ b/app/views/analyze.scala.html
@@ -1,4 +1,4 @@
-@(postUrl:Call, form: Form[forms.WebUrlInputForm.Data], scrapResult: Seq[AnalysisResult])(implicit request: MessagesRequestHeader)
+@(postUrl:Call, form: Form[forms.WebUrlInputForm.Data], analysisResult: Option[AnalysisResult])(implicit request: MessagesRequestHeader)
 
 <!DOCTYPE html>
 <html lang="en">
